grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-wakaze
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: grafana-wakaze
          servicePort: 3000
  defaultBackend:
    service:
      name: traefik
      port:
        number: 80
